src/test/resources/semantic/sentences/error/TC_ERROR_OPERATION2.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 8 | COLUMNA 23 | Operacion + no soportada para operandos de tipo Str |

start{
    Str string1,string2;
    Str fullStr;
    fullStr = string1 + string2;
}
